--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./images/logo/shop-32.png" />
+    <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Source+Sans+Pro:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Neelpari</title>
   </head>
   <body>
     <div id="root"></div>
