--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="./images/logo/shop-32.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/logo/shop-32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
