--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/logo/shop-32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Source+Sans+Pro:wght@200;300;400&display=swap"
       rel="stylesheet"
